<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white">

        <include layout="@layout/back_view" />

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_focus" />
    </RelativeLayout>

    <include layout="@layout/gray_line_no_margin" />

    <RelativeLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_item_click_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/change_password"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/size_20dp"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <include layout="@layout/gray_line_no_margin" />

    <RelativeLayout
        android:id="@+id/check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_item_click_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/check_update"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/size_20dp"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginLeft="@dimen/size_10dp"
        android:background="@color/color_f5f5f5" />

    <RelativeLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/simple_item_click_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/clear_cache"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/size_20dp"
            android:text="@string/_0_00mb"
            android:textColor="@color/color_cccccc"
            android:textSize="@dimen/text_14sp" />
    </RelativeLayout>

    <include layout="@layout/gray_line_no_margin" />

    <LinearLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:background="@drawable/login_button_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textSize="@dimen/text_17sp" />
    </LinearLayout>
</LinearLayout>