<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/read_window_bg"
    android:padding="@dimen/size_10dp"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/copy"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/read_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textColor="@color/color_65c933"
            android:textSize="@dimen/text_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/underline"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/underline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underline"
            android:textColor="@color/color_65c933"
            android:textSize="@dimen/text_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/note"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/read_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/color_65c933"
            android:textSize="@dimen/text_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/read_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/color_65c933"
            android:textSize="@dimen/text_12sp" />
    </LinearLayout>
</LinearLayout>
