<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white">

        <include layout="@layout/back_view" />

        <TextView
            style="@style/titleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/introduce" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/size_70dp"
                android:layout_height="@dimen/size_70dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/login_icon" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                tools:text="@string/app_name"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <com.bx.philosopher.widget.BreakTextView
                android:id="@+id/introduce_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20dp"
                android:layout_marginEnd="@dimen/size_20dp"
                android:background="@color/transparent"
                android:lineSpacingExtra="@dimen/size_10dp"
                tools:text="@string/introduce_text"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/size_20dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/copyright_2019_2022" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>